test/errhandling/psahabu/illegal-throw.good
illegal-throw.chpl:2: error: cannot throw in a non-throwing function
