test/errhandling/psahabu/illegal-throw.chpl
proc illegalThrow() {
  throw new Error();
}

illegalThrow();
